--- a/contrib/AOTOS/Core/Core.csproj
+++ b/contrib/AOTOS/Core/Core.csproj
@@ -37,12 +37,44 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Operands\Argument.cs" />
+    <Compile Include="Operands\Call.cs" />
+    <Compile Include="Operands\Constant.cs" />
+    <Compile Include="Operands\Field.cs" />
+    <Compile Include="Operands\Identifier.cs" />
+    <Compile Include="Instructions\ExceptionValue.cs" />
+    <Compile Include="Operands\Conditional.cs" />
+    <Compile Include="Operands\Boolean.cs" />
+    <Compile Include="Operands\Arithmetic.cs" />
+    <Compile Include="Operands\ArrayElement.cs" />
+    <Compile Include="Instructions\Assign.cs" />
     <Compile Include="Block.cs" />
+    <Compile Include="Instructions\Call.cs" />
+    <Compile Include="Instructions\ConditionalJump.cs" />
+    <Compile Include="Instructions\End.cs" />
     <Compile Include="Engine.cs" />
-    <Compile Include="Instructions.cs" />
-    <Compile Include="Operands.cs" />
-    <Compile Include="Operators.cs" />
+    <Compile Include="IAssembly.cs" />
+    <Compile Include="Instructions\Instruction.cs" />
+    <Compile Include="Instructions\Jump.cs" />
+    <Compile Include="Method.cs" />
+    <Compile Include="Operands\Local.cs" />
+    <Compile Include="Operands\Miscellaneous.cs" />
+    <Compile Include="Operands\Operand.cs" />
+    <Compile Include="Operands\Reference.cs" />
     <Compile Include="AssemblyInfo.cs" />
+    <Compile Include="Instructions\PHI.cs" />
+    <Compile Include="Instructions\Pop.cs" />
+    <Compile Include="Instructions\Return.cs" />
+    <Compile Include="Instructions\Switch.cs" />
+    <Compile Include="Instructions\System.cs" />
+    <Compile Include="Operands\Register.cs" />
+    <Compile Include="Operators\Binary.cs" />
+    <Compile Include="Operators\Boolean.cs" />
+    <Compile Include="Operators\Miscellaneous.cs" />
+    <Compile Include="Operators\Operator.cs" />
+    <Compile Include="Operators\OperatorImplementation.cs" />
+    <Compile Include="Operators\Relational.cs" />
+    <Compile Include="Operators\Unary.cs" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Properties\" />
