--- a/contrib/AOTOS/X86/X86.csproj
+++ b/contrib/AOTOS/X86/X86.csproj
@@ -37,9 +37,43 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Asm.cs" />
     <Compile Include="AssemblyInfo.cs" />
-    <Compile Include="x86.cs" />
-    <Compile Include="X86.Instructions.cs" />
+    <Compile Include="Bits32Instruction.cs" />
+    <Compile Include="ByteDataInstruction.cs" />
+    <Compile Include="ByteMemory.cs" />
+    <Compile Include="CRType.cs" />
+    <Compile Include="CR.cs" />
+    <Compile Include="DataInstruction.cs" />
+    <Compile Include="DR.cs" />
+    <Compile Include="DRType.cs" />
+    <Compile Include="DWordDataInstruction.cs" />
+    <Compile Include="DWordMemory.cs" />
+    <Compile Include="Engine.cs" />
+    <Compile Include="FP.cs" />
+    <Compile Include="FPType.cs" />
+    <Compile Include="Instruction.cs" />
+    <Compile Include="Instructions.cs" />
+    <Compile Include="LabelInstruction.cs" />
+    <Compile Include="Memory.cs" />
+    <Compile Include="OffsetInstruction.cs" />
+    <Compile Include="OrgInstruction.cs" />
+    <Compile Include="QWordMemory.cs" />
+    <Compile Include="R16.cs" />
+    <Compile Include="R16Type.cs" />
+    <Compile Include="R32.cs" />
+    <Compile Include="R32Type.cs" />
+    <Compile Include="R8.cs" />
+    <Compile Include="R8Type.cs" />
+    <Compile Include="Register.cs" />
+    <Compile Include="Seg.cs" />
+    <Compile Include="SegType.cs" />
+    <Compile Include="TR.cs" />
+    <Compile Include="TRType.cs" />
+    <Compile Include="TWordMemory.cs" />
+    <Compile Include="WordDataInstruction.cs" />
+    <Compile Include="WordMemory.cs" />
+    <Compile Include="Assembly.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Core\Core.csproj">
