--- a/contrib/AOTOS/SharpOS/SharpOS.csproj
+++ b/contrib/AOTOS/SharpOS/SharpOS.csproj
@@ -35,7 +35,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Main.cs" />
+    <Compile Include="Kernel.cs" />
     <Compile Include="AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
