Added the KernelTestsWrapperGen that generates the Wrapper files for SharpOS.Kernel.Tests.CS.dll and SharpOS.Kernel.Tests.IL.dll, and fixed some bugs.

--- a/Tools/KernelTestsWrapperGen/KernelTestsWrapperGen.csproj
+++ b/Tools/KernelTestsWrapperGen/KernelTestsWrapperGen.csproj
@@ -4,11 +4,11 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>8.0.50727</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{5E0259D4-4102-11DC-8314-0800200C9A66}</ProjectGuid>
-    <OutputType>Library</OutputType>
+    <ProjectGuid>{740EB78B-4306-41AC-880A-D8A494EA4429}</ProjectGuid>
+    <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>SharpOS.Kernel.Tests</RootNamespace>
-    <AssemblyName>SharpOS.Kernel.Tests</AssemblyName>
+    <RootNamespace>KernelTestsWrapperGen</RootNamespace>
+    <AssemblyName>KernelTestsWrapperGen</AssemblyName>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -18,43 +18,27 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
-    <OutputPath>..\..\..\build\</OutputPath>
+    <OutputPath>bin\Release\</OutputPath>
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="nunit.framework, Version=2.4.1.0, Culture=neutral, PublicKeyToken=96d09a1eb7f44a77, processorArchitecture=MSIL">
+    <Reference Include="Mono.Cecil, Version=0.5.0.0, Culture=neutral, PublicKeyToken=0738eb9f132ed756">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>References\nunit.framework.dll</HintPath>
+      <HintPath>..\..\References\Mono.Cecil.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="*.cs" />
-  </ItemGroup>
-  <ItemGroup>
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\Core\SharpOS.AOT.Core.csproj">
-      <Project>{7C0A6DF4-B2B8-4CD9-A073-EE834B4246F8}</Project>
-      <Name>SharpOS.AOT.Core</Name>
-    </ProjectReference>
-    <ProjectReference Include="CS\SharpOS.Kernel.Tests.CS.csproj">
-      <Project>{14D3B428-413F-11DC-8314-0800200C9A66}</Project>
-      <Name>SharpOS.Kernel.Tests.CS</Name>
-    </ProjectReference>
-    <ProjectReference Include="IL\SharpOS.Kernel.Tests.IL.ilproj">
-      <Project>{5E470596-4138-11DC-8314-0800200C9A66}</Project>
-      <Name>SharpOS.Kernel.Tests.IL</Name>
-    </ProjectReference>
+    <Compile Include="AssemblyInfo.cs" />
+    <Compile Include="Program.cs" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Properties\" />
@@ -67,7 +51,4 @@
   <Target Name="AfterBuild">
   </Target>
   -->
-  <PropertyGroup>
-    <PreBuildEvent>$(TargetDir)\KernelTestsWrapperGen.exe</PreBuildEvent>
-  </PropertyGroup>
 </Project>
