More small changes in the build files.

--- a/Kernel/Core/SharpOS.Kernel.Core.csproj
+++ b/Kernel/Core/SharpOS.Kernel.Core.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{1BDA3EE0-BC5F-4C4A-986C-31730A8EFADC}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>SharpOS.Kernel.Core</RootNamespace>
-    <AssemblyName>SharpOS.Kernel.Core</AssemblyName>
+    <RootNamespace>SharpOS.Kernel</RootNamespace>
+    <AssemblyName>SharpOS.Kernel</AssemblyName>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
