--- a/AOT/Kernel.Tests/NUnit/SharpOS.Kernel.Tests.NUnit.csproj
+++ b/AOT/Kernel.Tests/NUnit/SharpOS.Kernel.Tests.NUnit.csproj
@@ -43,6 +43,10 @@
   <ItemGroup>
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\..\..\Tools\KernelTestsWrapperGen\KernelTestsWrapperGen.csproj">
+      <Project>{740EB78B-4306-41AC-880A-D8A494EA4429}</Project>
+      <Name>KernelTestsWrapperGen</Name>
+    </ProjectReference>
     <ProjectReference Include="..\..\Core\SharpOS.AOT.Core.csproj">
       <Project>{7C0A6DF4-B2B8-4CD9-A073-EE834B4246F8}</Project>
       <Name>SharpOS.AOT.Core</Name>
@@ -51,7 +55,7 @@
       <Project>{14D3B428-413F-11DC-8314-0800200C9A66}</Project>
       <Name>SharpOS.Kernel.Tests.CS</Name>
     </ProjectReference>
-    <ProjectReference Include="..\IL\SharpOS.Kernel.Tests.IL.ilproj">
+    <ProjectReference Include="..\IL\SharpOS.Kernel.Tests.IL.csproj">
       <Project>{5E470596-4138-11DC-8314-0800200C9A66}</Project>
       <Name>SharpOS.Kernel.Tests.IL</Name>
     </ProjectReference>
