--- a/AOT/Kernel.Tests/SharpOS.Kernel.Tests.csproj
+++ b/AOT/Kernel.Tests/SharpOS.Kernel.Tests.csproj
@@ -51,6 +51,10 @@
       <Project>{7C0A6DF4-B2B8-4CD9-A073-EE834B4246F8}</Project>
       <Name>SharpOS.AOT.Core</Name>
     </ProjectReference>
+    <ProjectReference Include="..\Main\SharpOS.AOT.csproj">
+      <Project>{5AADA544-40FE-11DC-8314-0800200C9A66}</Project>
+      <Name>SharpOS.AOT</Name>
+    </ProjectReference>
     <ProjectReference Include="CS\SharpOS.Kernel.Tests.CS.csproj">
       <Project>{14D3B428-413F-11DC-8314-0800200C9A66}</Project>
       <Name>SharpOS.Kernel.Tests.CS</Name>
@@ -59,9 +63,6 @@
       <Project>{5E470596-4138-11DC-8314-0800200C9A66}</Project>
       <Name>SharpOS.Kernel.Tests.IL</Name>
     </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Properties\" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
@@ -73,5 +74,8 @@
   -->
   <PropertyGroup>
     <PreBuildEvent>$(TargetDir)\KernelTestsWrapperGen.exe</PreBuildEvent>
+    <PostBuildEvent>$(TargetDir)\SharpOS.AOT.exe -d:tests.dump -text-dump -v -o $(TargetDir)\SharpOS.Kernel.bin $(TargetDir)\SharpOS.Kernel.Tests.dll $(TargetDir)\SharpOS.Kernel.Tests.IL.dll $(TargetDir)\SharpOS.Kernel.Tests.CS.dll
+copy $(TargetDir)\..\Data\disk.img $(TargetDir)\distro\common
+$(TargetDir)\DiskImageUpdater.exe -i $(TargetDir)\SharpOS.Kernel.bin -o $(TargetDir)\distro\common\disk.img</PostBuildEvent>
   </PropertyGroup>
 </Project>
