--- a/Tools/DiskImageUpdater/DiskImageUpdater.csproj
+++ b/Tools/DiskImageUpdater/DiskImageUpdater.csproj
@@ -4,11 +4,11 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>8.0.50727</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{479653EE-C3CA-44A6-A18C-278608C51EAE}</ProjectGuid>
-    <OutputType>Library</OutputType>
+    <ProjectGuid>{6A1D2DCC-41E8-11DC-8314-0800200C9A66}</ProjectGuid>
+    <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>SharpOS.AOT.Tests</RootNamespace>
-    <AssemblyName>SharpOS.AOT.Tests</AssemblyName>
+    <RootNamespace>DiskImageUpdater</RootNamespace>
+    <AssemblyName>DiskImageUpdater</AssemblyName>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -28,22 +28,14 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="nunit.framework, Version=2.4.1.0, Culture=neutral, PublicKeyToken=96d09a1eb7f44a77, processorArchitecture=MSIL">
+    <Reference Include="Mono.GetOptions, Version=2.0.0.0, Culture=neutral, PublicKeyToken=0738eb9f132ed756, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>References\nunit.framework.dll</HintPath>
+      <HintPath>..\..\References\Mono.GetOptions.dll</HintPath>
     </Reference>
     <Reference Include="System" />
-    <Reference Include="System.Data" />
-    <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="*.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\Core\SharpOS.AOT.Core.csproj">
-      <Project>{7C0A6DF4-B2B8-4CD9-A073-EE834B4246F8}</Project>
-      <Name>SharpOS.AOT.Core</Name>
-    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
