Fixed the x86 stack access code. The trunk kernel is running again.

--- a/AOT/Main/SharpOS.AOT.csproj
+++ b/AOT/Main/SharpOS.AOT.csproj
@@ -88,4 +88,8 @@
   <Target Name="AfterBuild">
   </Target>
   -->
+  <PropertyGroup>
+    <PostBuildEvent>copy $(TargetDir)\..\Data\DiskImages\TemplateDisk.img $(TargetDir)\distro\common\SharpOS.img
+$(TargetDir)\DiskImageUpdater.exe -i $(TargetDir)\SharpOS.Kernel.bin -o $(TargetDir)\distro\common\SharpOS.img</PostBuildEvent>
+  </PropertyGroup>
 </Project>
