--- a/Tools/KernelTestsWrapperGen/KernelTestsWrapperGen.csproj
+++ b/Tools/KernelTestsWrapperGen/KernelTestsWrapperGen.csproj
@@ -32,6 +32,10 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\References\Mono.Cecil.dll</HintPath>
     </Reference>
+    <Reference Include="Mono.GetOptions, Version=2.0.0.0, Culture=neutral, PublicKeyToken=0738eb9f132ed756, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\References\Mono.GetOptions.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
