Bug fixing, changed the Kernel.Tests build file to update the distro/common/SharpOS.img, added the korlib project (mono doesn't want to compile it yet), and started the implementation of real strings.

--- a/AOT/Kernel.Tests/CS/SharpOS.Kernel.Tests.CS.csproj
+++ b/AOT/Kernel.Tests/CS/SharpOS.Kernel.Tests.CS.csproj
@@ -44,6 +44,7 @@
     <Compile Include="Boolean.cs" />
     <Compile Include="BooleanOrderOfOperations.cs" />
     <Compile Include="ByteString.cs" />
+    <Compile Include="String.cs" />
     <Compile Include="X86.cs" />
     <Compile Include="Enum.cs" />
     <Compile Include="Misc.cs" />
