--- a/AOT/Kernel.Tests/SharpOS.Kernel.Tests.csproj
+++ b/AOT/Kernel.Tests/SharpOS.Kernel.Tests.csproj
@@ -70,7 +70,7 @@
   -->
   <PropertyGroup>
     <PreBuildEvent>$(TargetDir)\KernelTestsWrapperGen.exe</PreBuildEvent>
-    <PostBuildEvent>$(TargetDir)\SharpOS.AOT.exe -v -o $(TargetDir)\SharpOS.Kernel.bin $(TargetDir)\SharpOS.Kernel.Tests.dll $(TargetDir)\SharpOS.Kernel.Tests.IL.dll $(TargetDir)\SharpOS.Kernel.Tests.CS.dll
+    <PostBuildEvent>$(TargetDir)\SharpOS.AOT.exe -v -o $(TargetDir)\SharpOS.Kernel.bin $(TargetDir)\SharpOS.Kernel.Tests.dll $(TargetDir)\SharpOS.Kernel.Tests.IL.dll $(TargetDir)\SharpOS.Kernel.Tests.CS.dll $(TargetDir)\SharpOS.korlib.dll
 copy $(TargetDir)\..\Data\DiskImages\TemplateDisk.img $(TargetDir)\distro\common\SharpOS.img
 $(TargetDir)\DiskImageUpdater.exe -i $(TargetDir)\SharpOS.Kernel.bin -o $(TargetDir)\distro\common\SharpOS.img</PostBuildEvent>
   </PropertyGroup>
