Added real string support. The Kernel.String still works but stores the strings as UTF7 (as always). The Kernel has been updated to use String instead of the Kernel.String. String for now can be only used in read-only mode, so only the .Length and [] can be used.

--- a/AOT/Kernel.Tests/CS/SharpOS.Kernel.Tests.CS.csproj
+++ b/AOT/Kernel.Tests/CS/SharpOS.Kernel.Tests.CS.csproj
@@ -43,8 +43,11 @@
     <Compile Include="BitwiseOperators.cs" />
     <Compile Include="Boolean.cs" />
     <Compile Include="BooleanOrderOfOperations.cs" />
-    <Compile Include="ByteString.cs" />
+    <Compile Include="ByteString.cs">
+      <SubType>Code</SubType>
+    </Compile>
     <Compile Include="String.cs" />
+    <Compile Include="WhileLoop.cs" />
     <Compile Include="X86.cs" />
     <Compile Include="Enum.cs" />
     <Compile Include="Misc.cs" />
