Changed the korlib source code so that the namespaces start with Internal. (e.g. System -> Internal.System). The 'Internal' gets stripped by the AOT from the namespace.

--- a/Kernel/korlib/SharpOS.korlib.csproj
+++ b/Kernel/korlib/SharpOS.korlib.csproj
@@ -15,7 +15,7 @@
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
     <OutputPath>..\..\build\</OutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
+    <DefineConstants>TRACE;DEBUG;-nostdlib</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
