The optimizations are disabled and no register allocation is performed. The assembler dump now outputs the IR instructions followed but the corresponding x86 instructions. More and bigger changes are still to come, and we need more test cases.

--- a/AOT/Kernel.Tests/CS/SharpOS.Kernel.Tests.CS.csproj
+++ b/AOT/Kernel.Tests/CS/SharpOS.Kernel.Tests.CS.csproj
@@ -38,6 +38,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Arguments.cs" />
     <Compile Include="Arithmetic.cs" />
     <Compile Include="Array.cs" />
     <Compile Include="BitwiseOperators.cs" />
