--- a/Kernel/Core/SharpOS.Kernel.Core.csproj
+++ b/Kernel/Core/SharpOS.Kernel.Core.csproj
@@ -62,7 +62,8 @@
   </Target>
   -->
   <PropertyGroup>
-    <PreBuildEvent>$(TargetDir)\key-compiler.exe -ar -o:"$(TargetDir)\Temp\BuiltinKeymaps.ska" "$(ProjectDir)\Config\BuiltinKeymaps.cfg"</PreBuildEvent>
+    <PreBuildEvent>$(TargetDir)\key-compiler.exe $(SolutionDir)\Data\KeyMaps\US.skm -o:"$(SolutionDir)\build\KeyMaps\US.bin"
+$(TargetDir)\key-compiler.exe -ar -o:"$(TargetDir)\Temp\BuiltinKeymaps.ska" "@$(ProjectDir)\Config\BuiltinKeymaps.cfg"</PreBuildEvent>
     <PostBuildEvent>$(TargetDir)\SharpOS.AOT.exe -d:tests.dump -text-dump -v -o $(TargetDir)\SharpOS.Kernel.bin $(TargetDir)\SharpOS.Kernel.dll $(TargetDir)\SharpOS.korlib.dll
 copy $(TargetDir)\..\Data\DiskImages\TemplateDisk.img $(TargetDir)\distro\common\SharpOS.img
 $(TargetDir)\DiskImageUpdater.exe -i $(TargetDir)\SharpOS.Kernel.bin -o $(TargetDir)\distro\common\SharpOS.img</PostBuildEvent>
