Base namespace in project file is "SharpOS.Kernel", instead of "SharpOS" which is the actuall base namespace used by the files in the project.. this way when a new file is added to the project it automatically gets the correct namespace.

--- a/Kernel/Core/SharpOS.Kernel.Core.csproj
+++ b/Kernel/Core/SharpOS.Kernel.Core.csproj
@@ -7,7 +7,7 @@
     <ProjectGuid>{1BDA3EE0-BC5F-4C4A-986C-31730A8EFADC}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>SharpOS.Kernel</RootNamespace>
+    <RootNamespace>SharpOS</RootNamespace>
     <AssemblyName>SharpOS.Kernel</AssemblyName>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
