Tested memory allocation/deallocation, removed some bugs, seems to work now (but a lot of memory fragmentation, which will be ironed out later on)

--- a/Kernel/Core/SharpOS.Kernel.Core.csproj
+++ b/Kernel/Core/SharpOS.Kernel.Core.csproj
@@ -51,6 +51,7 @@
     <Compile Include="ADC\Keyboard.cs" />
     <Compile Include="ADC\Keys.cs" />
     <Compile Include="ADC\Memory.cs" />
+    <Compile Include="ADC\MemoryManager.cs" />
     <Compile Include="ADC\Pager.cs" />
     <Compile Include="ADC\Processor.cs" />
     <Compile Include="ADC\ProcessorType.cs" />
